--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,8 @@
     RewriteEngine On
     RewriteBase /kak/
 
+    # Hilangkan index.php dari URL
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.+)$ index.php?$1 [L]
+    RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
